Revert "Added align items to main to stop stretching"
This reverts commit 4d12578d47eb55ecf00cb2198f14d7b7626a3ec6.

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -61,7 +61,6 @@ main {
   padding: 32px;
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-start; /* to stop stretching vertically */
   gap: 32px;
 }
 
